# sprite

./: 00_TRANS.TBL  README.md  boot.txt  filename.lst  index.txt  ls_lR  readme.txt  sprite.txt
admin/: 00_TRANS.TBL  Rdate  Rdist  accountgone  distfile  hosts  machineTypes  restore
docs/: 00_TRANS.TBL  pmake.ps  rpc.ps  spriteEng.ps
lib/: 00_TRANS.TBL  ded.hlp  diffh  ex.depend  mh  mh.ds5000  term  tex.ps  tmac
man/: 00_TRANS.TBL
papers/: 00_TRANS.TBL  README.txt  amoeba-sprite.ps  availability.ps  bsd-traces.ps  cache-performance.ps  caching.ps  distr-state.ps  exp-proc-mig.ps  fs-in-kernel.ps  ipserver.ps  jaquith.ps  lfs-case.ps  lfs-design.ps  lfs-storage.ps  multiprocessor.ps  name-caching.ps  nvram.ps  os-benchmark.ps  pdev.ps  pfs.ps  sprite.bib  (+15 more)
src/cmds/gdb.new/gdb-3.98/bfd.mips/: 00_TRANS.TBL  Makefile  Makefile.in  aoutf1.h  archures.c  bfd.c  cache.c  coffcode.h  config.status  configure  configure.in  ecoff.c  host-aout.c  libaout.h  libbfd.h  libieee.h  m68kcoff.c  newsos3.c  reloc.c  section.c  srec.c  syms.c  trad-core.c
src/cmds/gdb.new/gdb-3.98/bfd.mips/config/: 00_TRANS.TBL  hmake-dec3100  hmake-hp9000  hmake-sun3  hmake-sun4  tmake-i386  tmake-sun3  tmake-tahoe  tmake-vax
src/cmds/gdb.new/gdb-3.98/libiberty/: 00_TRANS.TBL  Makefile.in  configure  configure.in  getopt1.c  obstack.c
src/cmds/gdb.new/gdb-3.98/libiberty/config/: 00_TRANS.TBL  hmake-dgux
src/cmds/gdb.new/gdb-4.0/libiberty/: 00_TRANS.TBL  Makefile.in  README  configure  configure.in  getopt.c  obstack.c
src/cmds/gdb.new/gdb-4.0/libiberty/config/: 00_TRANS.TBL  hmake-sysv
(+24463 files in other folders)
