# This file is a shell script that supplies the information necessary
# to tailor a template configure script into the configure script
# appropriate for this directory.  For more information, check any
# existing configure script.

srctrigger=libbfd.c
srcname="bfd"

# per-host:

# per-target:

files=
links=
