# This file is a shell script fragment that supplies the information
# necessary to tailor a template configure script into the configure
# script appropriate for this directory.  For more information, check
# any existing configure script.

configdirs=
srctrigger=getopt1.c
srcname="getopt library"

# per-host:

# per-target:

