# This file is a shell script fragment that supplies the information
# necessary to tailor a template configure script into the configure
# script appropriate for this directory.  For more information, check
# any existing configure script.

configdirs=
srctrigger=getopt1.c
srcname="getopt library"
commontargets=true

# per-host:

case "${host_os}" in
sysv | dgux)	
	host_makefile_frag=config/hmake-sysv
	;;
esac

# per-target:

